# life

./: CMakeLists.txt  README.md
src/: game.c  game.h  main.c
src/vladlib/: CMakeLists.txt  Makefile  vladlib.c  vladlib.h
src/vladlib/utils/: index_buffer_obj.h  shaders.h  vertex_array_object.h  vertex_buffer_object.h
